--- a/styles/index.css
+++ b/styles/index.css
@@ -1,6 +1,7 @@
 h2 {
     margin: 0 auto 2rem auto;
     font-size: 22px;
+
 }
 
 body {
@@ -122,7 +123,9 @@ body {
 }
 
 .garden__section>h2 {
-    color: white;
+    color: black;
+    padding: 150px 0 0 0;
+    font-family: "Rubik", sans-serif;
 }
 
 .garden__content {
@@ -137,6 +140,12 @@ body {
 
     border-radius: 8px;
     font-size: 3em;
+}
+
+.garden__section {
+    background-color: white;
+    height: 600px;
+    border-radius: 8px;
 }
 
 .city-name__reset-btn {
