--- a/styles/index.css
+++ b/styles/index.css
@@ -13,8 +13,13 @@ body {
 
     font-family: "Rubik", sans-serif;
     /* font-size: 12px; */
-    background-color: #505f7a;
-    margin: 2rem;
+    background-image: url(../assets/images/mark-harpur-K2s_YE031CA-unsplash.jpg);
+    /* margin: 2rem; */
+    background-size:cover;
+    background-repeat: no-repeat;
+    background-attachment:fixed;
+    margin-left: 5rem;
+    width:max-content;
 }
 
 #increaseTempControl {
